# Generated by Django 5.2.10 on 2026-01-18 06:03
"""Initial schema for accounts and profile models."""

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):
    """Create initial account-related tables."""

    initial = True

    dependencies = [
        ("auth", "0012_alter_user_first_name_max_length"),
    ]

    operations = [
        migrations.CreateModel(
            name="User",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                (
                    "last_login",
                    models.DateTimeField(blank=True, null=True, verbose_name="last login"),
                ),
                (
                    "is_superuser",
                    models.BooleanField(
                        default=False,
                        help_text="Designates that this user has all permissions without explicitly assigning them.",
                        verbose_name="superuser status",
                    ),
                ),
                ("username", models.EmailField(max_length=320, unique=True)),
                ("name", models.CharField(max_length=255)),
                ("is_active", models.BooleanField(db_column="enabled", default=True)),
                ("is_staff", models.BooleanField(default=False)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                (
                    "password",
                    models.CharField(
                        blank=True, db_column="password_hash", max_length=128, null=True
                    ),
                ),
                (
                    "groups",
                    models.ManyToManyField(
                        blank=True,
                        help_text="The groups this user belongs to. A user will get all permissions granted to each of their groups.",
                        related_name="user_set",
                        related_query_name="user",
                        to="auth.group",
                        verbose_name="groups",
                    ),
                ),
                (
                    "user_permissions",
                    models.ManyToManyField(
                        blank=True,
                        help_text="Specific permissions for this user.",
                        related_name="user_set",
                        related_query_name="user",
                        to="auth.permission",
                        verbose_name="user permissions",
                    ),
                ),
            ],
            options={
                "db_table": "app_users",
            },
        ),
        migrations.CreateModel(
            name="OAuthAccount",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("provider", models.CharField(choices=[("GOOGLE", "Google")], max_length=32)),
                ("subject", models.CharField(max_length=255)),
                ("email", models.EmailField(max_length=320)),
                ("email_verified", models.BooleanField(blank=True, null=True)),
                ("picture_url", models.CharField(blank=True, max_length=512, null=True)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("last_login_at", models.DateTimeField(blank=True, null=True)),
                (
                    "user",
                    models.ForeignKey(
                        db_column="user_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "db_table": "oauth_accounts",
            },
        ),
        migrations.CreateModel(
            name="StudentProfile",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("consent", models.BooleanField(default=False)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                (
                    "created_by",
                    models.ForeignKey(
                        db_column="created_by_user_id",
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="students_created",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "user",
                    models.OneToOneField(
                        db_column="user_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="student_profile",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "db_table": "student_profiles",
            },
        ),
        migrations.CreateModel(
            name="TeacherProfile",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                (
                    "user",
                    models.OneToOneField(
                        db_column="user_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="teacher_profile",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "db_table": "teacher_profiles",
            },
        ),
        migrations.CreateModel(
            name="UserRole",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                (
                    "role",
                    models.CharField(
                        choices=[
                            ("ADMIN", "Admin"),
                            ("TEACHER", "Teacher"),
                            ("STUDENT", "Student"),
                        ],
                        max_length=32,
                    ),
                ),
                (
                    "user",
                    models.ForeignKey(
                        db_column="user_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="roles",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "db_table": "user_roles",
            },
        ),
        migrations.AddIndex(
            model_name="user",
            index=models.Index(fields=["username"], name="idx_user_username"),
        ),
        migrations.AddConstraint(
            model_name="user",
            constraint=models.UniqueConstraint(fields=("username",), name="uq_user_username"),
        ),
        migrations.AddIndex(
            model_name="oauthaccount",
            index=models.Index(fields=["email"], name="idx_oauth_email"),
        ),
        migrations.AddIndex(
            model_name="oauthaccount",
            index=models.Index(fields=["user"], name="idx_oauth_user"),
        ),
        migrations.AddConstraint(
            model_name="oauthaccount",
            constraint=models.UniqueConstraint(
                fields=("provider", "subject"), name="uq_oauth_provider_subject"
            ),
        ),
        migrations.AddIndex(
            model_name="studentprofile",
            index=models.Index(fields=["created_by"], name="idx_student_created_by"),
        ),
        migrations.AddConstraint(
            model_name="studentprofile",
            constraint=models.UniqueConstraint(fields=("user",), name="uq_student_user"),
        ),
        migrations.AddConstraint(
            model_name="teacherprofile",
            constraint=models.UniqueConstraint(fields=("user",), name="uq_teacher_user"),
        ),
        migrations.AddConstraint(
            model_name="userrole",
            constraint=models.UniqueConstraint(fields=("user", "role"), name="uq_user_role"),
        ),
    ]
