@startuml
hide circle
skinparam classAttributeIconSize 0

package "accounts" {
class OAuthAccount <<Model>> {
  +id: BigAutoField
  +user: User
  +provider: CharField
  +subject: CharField
  +email: CharField
  +email_verified: BooleanField
  +picture_url: CharField
  +created_at: DateTimeField
  +last_login_at: DateTimeField
}
class StudentProfile <<Model>> {
  +id: BigAutoField
  +user: User
  +created_by: User
  +consent: BooleanField
  +created_at: DateTimeField
}
class TeacherProfile <<Model>> {
  +id: BigAutoField
  +user: User
  +created_at: DateTimeField
}
class User <<Model>> {
  +id: BigAutoField
  +last_login: DateTimeField
  +is_superuser: BooleanField
  +username: CharField
  +name: CharField
  +is_active: BooleanField
  +is_staff: BooleanField
  +created_at: DateTimeField
  +updated_at: DateTimeField
  +password: CharField
  +groups: List[Group]
  +user_permissions: List[Permission]
}
class UserRole <<Model>> {
  +id: BigAutoField
  +user: User
  +role: CharField
}
}

User "*" -- "*" Group : groups
User "*" -- "*" Permission : user_permissions
UserRole "0..*" -- "1" User : user
TeacherProfile "0..*" -- "1" User : user
StudentProfile "0..*" -- "1" User : user
StudentProfile "0..*" -- "1" User : created_by
OAuthAccount "0..*" -- "1" User : user
@enduml
